--- a/src/main/resources/mobs.yml
+++ b/src/main/resources/mobs.yml
@@ -70,6 +70,9 @@ CaveSpider:
     expMax: 2
 
 Chicken:
+  RawChicken: true
+  Feathers: true
+  LayEggs: true
   Exp: true
   CustomExp:
     Enable: false
